Remove unused classes, optimize imports, add tests, and refactor for clarity the backend packages